--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Euler10.cs" />
     <Compile Include="Euler2.cs" />
     <Compile Include="Euler3.cs" />
     <Compile Include="Euler4.cs" />
