--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Euler10.cs" />
+    <Compile Include="Euler11.cs" />
     <Compile Include="Euler2.cs" />
     <Compile Include="Euler3.cs" />
     <Compile Include="Euler4.cs" />
