--- a/ProjectEulerFSharp/ProjectEulerFSharp.fsproj
+++ b/ProjectEulerFSharp/ProjectEulerFSharp.fsproj
@@ -62,9 +62,13 @@
     <Compile Include="Euler16.fs" />
     <Compile Include="Euler17.fs" />
     <Compile Include="Euler18.fs" />
+    <Compile Include="Euler20.fs" />
+    <Compile Include="Euler25.fs" />
+    <Compile Include="Euler67.fs" />
     <Compile Include="Program.fs" />
     <Content Include="Euler13.txt" />
     <None Include="packages.config" />
+    <Content Include="triangle.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.PowerPack">
