--- a/ProjectEulerFSharp/ProjectEulerFSharp.fsproj
+++ b/ProjectEulerFSharp/ProjectEulerFSharp.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="Euler20.fs" />
     <Compile Include="Euler21.fs" />
     <Compile Include="Euler22.fs" />
+    <Compile Include="Euler24.fs" />
     <Compile Include="Euler25.fs" />
     <Compile Include="Euler26.fs" />
     <Compile Include="Euler67.fs" />
@@ -90,6 +91,18 @@
     </Reference>
     <Reference Include="FSharp.PowerPack.Parallel.Seq">
       <HintPath>..\packages\FSPowerPack.Parallel.Seq.Community.3.0.0.0\Lib\Net40\FSharp.PowerPack.Parallel.Seq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MathNet.Numerics">
+      <HintPath>..\packages\MathNet.Numerics.2.6.1\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MathNet.Numerics.FSharp">
+      <HintPath>..\packages\MathNet.Numerics.FSharp.2.6.0\lib\net40\MathNet.Numerics.FSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MathNet.Numerics.IO">
+      <HintPath>..\packages\MathNet.Numerics.2.6.1\lib\net40\MathNet.Numerics.IO.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
