--- a/ProjectEulerFSharp/packages.config
+++ b/ProjectEulerFSharp/packages.config
@@ -5,4 +5,6 @@
   <package id="FSPowerPack.Linq.Community" version="3.0.0.0" targetFramework="net45" />
   <package id="FSPowerPack.Metadata.Community" version="3.0.0.0" targetFramework="net45" />
   <package id="FSPowerPack.Parallel.Seq.Community" version="3.0.0.0" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="2.6.1" targetFramework="net45" />
+  <package id="MathNet.Numerics.FSharp" version="2.6.0" targetFramework="net45" />
 </packages>
