--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Euler19.cs" />
     <Compile Include="Euler21.cs" />
     <Compile Include="Euler22.cs" />
+    <Compile Include="Euler26.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
